--- a/GIFT.html
+++ b/GIFT.html
@@ -104,7 +104,7 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
     const messages = [
-      "You are the best part of my day ❤️",
+      "Yours always Bubbles 🫧❤️",
       "Your smile makes everything better 😊",
       "I'm so lucky to have you 💕",
       "With you, every moment is special ✨",
@@ -172,3 +172,4 @@
   </script>
 </body>
 </html>
+
